--- a/openApiDocs/beta/CloudCommunications.yml
+++ b/openApiDocs/beta/CloudCommunications.yml
@@ -343,6 +343,8 @@ paths:
                 - endDateTime desc
                 - failureInfo
                 - failureInfo desc
+                - isTest
+                - isTest desc
                 - modalities
                 - modalities desc
                 - startDateTime
@@ -363,6 +365,7 @@ paths:
                 - caller
                 - endDateTime
                 - failureInfo
+                - isTest
                 - modalities
                 - startDateTime
                 - segments
@@ -459,6 +462,7 @@ paths:
                 - caller
                 - endDateTime
                 - failureInfo
+                - isTest
                 - modalities
                 - startDateTime
                 - segments
@@ -9680,6 +9684,10 @@ components:
               format: date-time
             failureInfo:
               $ref: '#/components/schemas/microsoft.graph.callRecords.failureInfo'
+            isTest:
+              type: boolean
+              description: Specifies whether the session is a test.
+              nullable: true
             modalities:
               type: array
               items:
@@ -10268,6 +10276,7 @@ components:
               $ref: '#/components/schemas/microsoft.graph.onlineMeetingRestricted'
             rosterSequenceNumber:
               type: integer
+              description: Indicates the roster sequence number the participant was last updated in.
               format: int64
               nullable: true
           additionalProperties:
@@ -11088,6 +11097,7 @@ components:
       properties:
         reason:
           type: string
+          description: The removal reason for the participant resource.
           nullable: true
       additionalProperties:
         type: object
@@ -12000,6 +12010,12 @@ components:
           description: Average estimated bandwidth available between two endpoints in bits per second.
           format: int64
           nullable: true
+        averageFreezeDuration:
+          pattern: '^-?P([0-9]+D)?(T([0-9]+H)?([0-9]+M)?([0-9]+([.][0-9]+)?S)?)?$'
+          type: string
+          description: Average of the received freeze duration related to the video stream.
+          format: duration
+          nullable: true
         averageJitter:
           pattern: '^-?P([0-9]+D)?(T([0-9]+H)?([0-9]+M)?([0-9]+([.][0-9]+)?S)?)?$'
           type: string
@@ -12048,6 +12064,10 @@ components:
           description: 'UTC time when the stream ended. The DateTimeOffset type represents date and time information using ISO 8601 format and is always in UTC time. For example, midnight UTC on Jan 1, 2014 is 2014-01-01T00:00:00Z'
           format: date-time
           nullable: true
+        isAudioForwardErrorCorrectionUsed:
+          type: boolean
+          description: Indicates whether the forward error correction (FEC) was used at some point during the session. The default value is null.
+          nullable: true
         lowFrameRateRatio:
           type: number
           description: Fraction of the call where frame rate is less than 7.5 frames per second.
@@ -12095,6 +12115,12 @@ components:
           type: number
           description: Packet loss rate after FEC has been applied aggregated across all video streams and codecs.
           format: float
+          nullable: true
+        rmsFreezeDuration:
+          pattern: '^-?P([0-9]+D)?(T([0-9]+H)?([0-9]+M)?([0-9]+([.][0-9]+)?S)?)?$'
+          type: string
+          description: Root mean square of the received freeze duration related to the video stream.
+          format: duration
           nullable: true
         startDateTime:
           pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
