--- a/openApiDocs/v1.0/Identity.SignIns.yml
+++ b/openApiDocs/v1.0/Identity.SignIns.yml
@@ -8611,6 +8611,37 @@ paths:
         nextLinkName: '@odata.nextLink'
         operationName: listMore
       x-ms-docs-operation-type: operation
+    post:
+      tags:
+        - organization.certificateBasedAuthConfiguration
+      summary: Create new navigation property to certificateBasedAuthConfiguration for organization
+      operationId: organization_CreateCertificateBasedAuthConfiguration
+      parameters:
+        - name: organization-id
+          in: path
+          description: The unique identifier of organization
+          required: true
+          style: simple
+          schema:
+            type: string
+          x-ms-docs-key-type: organization
+      requestBody:
+        description: New navigation property
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/microsoft.graph.certificateBasedAuthConfiguration'
+        required: true
+      responses:
+        2XX:
+          description: Created navigation property.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/microsoft.graph.certificateBasedAuthConfiguration'
+        default:
+          $ref: '#/components/responses/error'
+      x-ms-docs-operation-type: operation
   '/organization/{organization-id}/certificateBasedAuthConfiguration/{certificateBasedAuthConfiguration-id}':
     get:
       tags:
@@ -8667,6 +8698,40 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/microsoft.graph.certificateBasedAuthConfiguration'
+        default:
+          $ref: '#/components/responses/error'
+      x-ms-docs-operation-type: operation
+    delete:
+      tags:
+        - organization.certificateBasedAuthConfiguration
+      summary: Delete navigation property certificateBasedAuthConfiguration for organization
+      operationId: organization_DeleteCertificateBasedAuthConfiguration
+      parameters:
+        - name: organization-id
+          in: path
+          description: The unique identifier of organization
+          required: true
+          style: simple
+          schema:
+            type: string
+          x-ms-docs-key-type: organization
+        - name: certificateBasedAuthConfiguration-id
+          in: path
+          description: The unique identifier of certificateBasedAuthConfiguration
+          required: true
+          style: simple
+          schema:
+            type: string
+          x-ms-docs-key-type: certificateBasedAuthConfiguration
+        - name: If-Match
+          in: header
+          description: ETag
+          style: simple
+          schema:
+            type: string
+      responses:
+        2XX:
+          description: Success
         default:
           $ref: '#/components/responses/error'
       x-ms-docs-operation-type: operation
@@ -11085,6 +11150,7 @@ paths:
             items:
               enum:
                 - id
+                - automaticUserConsentSettings
                 - b2bCollaborationInbound
                 - b2bCollaborationOutbound
                 - b2bDirectConnectInbound
@@ -11189,6 +11255,8 @@ paths:
             type: array
             items:
               enum:
+                - automaticUserConsentSettings
+                - automaticUserConsentSettings desc
                 - b2bCollaborationInbound
                 - b2bCollaborationInbound desc
                 - b2bCollaborationOutbound
@@ -11214,6 +11282,7 @@ paths:
             type: array
             items:
               enum:
+                - automaticUserConsentSettings
                 - b2bCollaborationInbound
                 - b2bCollaborationOutbound
                 - b2bDirectConnectInbound
@@ -11291,6 +11360,7 @@ paths:
             type: array
             items:
               enum:
+                - automaticUserConsentSettings
                 - b2bCollaborationInbound
                 - b2bCollaborationOutbound
                 - b2bDirectConnectInbound
@@ -19181,6 +19251,8 @@ components:
         - title: crossTenantAccessPolicyConfigurationDefault
           type: object
           properties:
+            automaticUserConsentSettings:
+              $ref: '#/components/schemas/microsoft.graph.inboundOutboundPolicyConfiguration'
             b2bCollaborationInbound:
               $ref: '#/components/schemas/microsoft.graph.crossTenantAccessPolicyB2BSetting'
             b2bCollaborationOutbound:
@@ -19201,6 +19273,8 @@ components:
       title: crossTenantAccessPolicyConfigurationPartner
       type: object
       properties:
+        automaticUserConsentSettings:
+          $ref: '#/components/schemas/microsoft.graph.inboundOutboundPolicyConfiguration'
         b2bCollaborationInbound:
           $ref: '#/components/schemas/microsoft.graph.crossTenantAccessPolicyB2BSetting'
         b2bCollaborationOutbound:
@@ -20324,7 +20398,7 @@ components:
         lastNonInteractiveSignInDateTime:
           pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
           type: string
-          description: 'The last non-interactive sign-in date for a specific user. You can use this field to calculate the last time a client signed in to the directory on behalf of a user. Because some users may use clients to access tenant resources rather than signing into your tenant directly, you can use the non-interactive sign-in date to along with lastSignInDateTime to identify inactive users. The timestamp represents date and time information using ISO 8601 format and is always in UTC time. For example, midnight UTC on Jan 1, 2014 is: ''2014-01-01T00:00:00Z''. Azure AD maintains non-interactive sign-ins going back to May 2020. For more information about using the value of this property, see Manage inactive user accounts in Azure AD.'
+          description: 'The last non-interactive sign-in date for a specific user. You can use this field to calculate the last time a client attempted to sign into the directory on behalf of a user. Because some users may use clients to access tenant resources rather than signing into your tenant directly, you can use the non-interactive sign-in date to along with lastSignInDateTime to identify inactive users. The timestamp represents date and time information using ISO 8601 format and is always in UTC time. For example, midnight UTC on Jan 1, 2014 is: ''2014-01-01T00:00:00Z''. Azure AD maintains non-interactive sign-ins going back to May 2020. For more information about using the value of this property, see Manage inactive user accounts in Azure AD.'
           format: date-time
           nullable: true
         lastNonInteractiveSignInRequestId:
@@ -20334,7 +20408,7 @@ components:
         lastSignInDateTime:
           pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
           type: string
-          description: 'The last interactive sign-in date and time for a specific user. You can use this field to calculate the last time a user signed in to the directory with an interactive authentication method. This field can be used to build reports, such as inactive users. The timestamp represents date and time information using ISO 8601 format and is always in UTC time. For example, midnight UTC on Jan 1, 2014 is: ''2014-01-01T00:00:00Z''. Azure AD maintains interactive sign-ins going back to April 2020. For more information about using the value of this property, see Manage inactive user accounts in Azure AD.'
+          description: 'The last interactive sign-in date and time for a specific user. You can use this field to calculate the last time a user attempted to sign into the directory with an interactive authentication method. This field can be used to build reports, such as inactive users. The timestamp represents date and time information using ISO 8601 format and is always in UTC time. For example, midnight UTC on Jan 1, 2014 is: ''2014-01-01T00:00:00Z''. Azure AD maintains interactive sign-ins going back to April 2020. For more information about using the value of this property, see Manage inactive user accounts in Azure AD.'
           format: date-time
           nullable: true
         lastSignInRequestId:
@@ -22753,6 +22827,18 @@ components:
             type: string
             nullable: true
           description: 'Indicates if user consent to apps is allowed, and if it is, which permission to grant consent and which app consent policy (permissionGrantPolicy) govern the permission for users to grant consent. Value should be in the format managePermissionGrantsForSelf.{id}, where {id} is the id of a built-in or custom app consent policy. An empty list indicates user consent to apps is disabled.'
+      additionalProperties:
+        type: object
+    microsoft.graph.inboundOutboundPolicyConfiguration:
+      title: inboundOutboundPolicyConfiguration
+      type: object
+      properties:
+        inboundAllowed:
+          type: boolean
+          nullable: true
+        outboundAllowed:
+          type: boolean
+          nullable: true
       additionalProperties:
         type: object
     microsoft.graph.crossTenantAccessPolicyB2BSetting:
