Added script for importing examples from api reference into v2 example files

--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,6 @@ MigrationBackup/
 localenv.json
 *Microsoft.Graph.Authentication-TestResults.xml
 coverage.xml
+
+#Wrong Examples report Folder
+examplesreport/
